share styles for overlay on firefox, fix link in federal liability protection

--- a/src/_sass/components/share.scss
+++ b/src/_sass/components/share.scss
@@ -11,10 +11,12 @@
     content: "";
     display: none;
     position: fixed;
+    top: 0;
     width: 100%;
     height: 150%;
     background-color: rgba(0,0,0,0.3);
     pointer-events: none;
+    z-index: 800;
     @include transition(1s);
   }
   a {
@@ -25,6 +27,7 @@
   &.active {
     top: 0;
     &:after {
+      top: 125px;
       display: block;
     }
   }
